# mtr-optimizer

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.gradle  fabric-loom.gradle.plugin-1.9.2.pom  gradle.properties  settings.gradle
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: performance_issue.yml
.github/workflows/: build.yml  ci-build.yml  release-publish.yml
docs/: architecture.md  mixin-targets.md
native/: Cargo.toml
native/.cargo/: config.toml
native/src/: atlas_builder.rs  js_engine.rs  lib.rs  math_simd.rs
scripts/: setup-dev-env.sh
src/main/java/com/mtr_optimizer/: MTROptimizerMod.java
src/main/java/com/mtr_optimizer/config/: OptimizerConfig.java
src/main/java/com/mtr_optimizer/mixin/: BufferBuilderMixin.java  SignRendererMixin.java  TrainEntityRendererMixin.java  WorldRendererMixin.java
src/main/java/com/mtr_optimizer/native/: NativeJSRunner.java  NativeMathLib.java
src/main/java/com/mtr_optimizer/native_bridge/: NativeLoader.java
src/main/java/com/mtr_optimizer/nativebridge/: NativeJSRunner.java  NativeMathLib.java
src/main/java/com/mtr_optimizer/render/: AdvancedFrustumCuller.java  CachedVBO.java  LODManager.java  RenderContext.java  SignTextureCache.java  TrainInstanceBatcher.java  VBOCacheManager.java
src/main/resources/: fabric.mod.json  mtr-optimizer.mixins.json
src/main/resources/assets/mtr-optimizer/lang/: en_us.json  fr_fr.json  zh_cn.json  zh_hk.json  zh_tw.json
